2002-09-25  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/tap/manhole.py: mktap manhole will now prompt for a
	password or accept one from stdin if one is not provided on the
	command line.

2002-09-25  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* bin/tapconvert: made sure tapconvert program gets installed.

2002-09-24  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/web/resource.py (Resource.wasModifiedSince): revoked,
	not adding this after all.  Instead,

	* twisted/protocols/http.py (Request.setLastModified)
	(Request.setETag): these methods to set cache validation headers
	for the request will return http.CACHED if the request is
	conditional and this setting causes the condition to fail.

2002-9-24  Moshe Zadka <moshez@twistedmatrix.com>

	* .: Releasing 0.99.2rc2

2002-9-23  Donovan Preston <dp@twistedmatrix.com>

	* Renaming domtemplate/domwidgets/dominput/wmvc to Woven
	Woven - The Web Object Visualization Environment

	* Created package twisted/web/woven

	* Renamed domtemplate to template, domwidgets to widgets,
	and dominput to input

	* Refactored wmvc into three modules, model, view, and controller

2002-9-23  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/spread/pb.py: add getObjectAtSSL, refactored into
	getObjectRetreiver so more transports can be easily supported

2002-09-21  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/protocols/http.py (Request.setLastModified): Use
	setLastModified to set a timestamp on a http.Request object, and
	it will add a Last-Modified header to the outgoing reply.

	* twisted/web/resource.py (Resource.wasModifiedSince): companion
	method, override this to get sensible handling of
	If-Modified-Since conditional requests.

2002-09-21  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/web/static.py, twisted/web/script.py: Previously, it was
	  not possible to use the same xmlmvc application (directory full
	  of files and all) to interface to separate instances in the same