@@ -1,3 +1,9 @@
+2002-09-26  Glyph Lefkowitz  <glyph@twistedmatrix.com>
+
+	* twisted/web/microdom.py: Better string formatting of XML
+	elements is now available, to aid with debugging of web.woven
+	(among other applications).
+
 2002-09-25  Kevin Turner  <acapnotic@twistedmatrix.com>
 
 	* twisted/tap/manhole.py: mktap manhole will now prompt for a
